--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About VisionVault</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Poppins Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
@@ -21,7 +18,7 @@
 <div class="container">
     <header class="header-section">
         <h1 class="title">About VisionVault</h1>
-        <p class="intro">VisionVault is an online platform where creative individuals can showcase their projects and talents, connect with opportunities, and explore innovative work from others.From showcasing your talents to discovering new inspiration and forging meaningful connections, VisionVault is your gateway to the global creative community. Join us today and unleash your creativity on a global scale!</p>
+        <p class="intro">VisionVault aims to be a comprehensive resource for creatives, offering the tools and community support they need to showcase their talents, connect with opportunities, and continually find inspiration through the work of others.</p>
     </header>
     <section class="mission-section">
         <h2 class="section-title">Our Mission</h2>
@@ -80,17 +77,15 @@
     <section class="cta-section">
         <h2 class="section-title">Join VisionVault Today</h2>
         <p class="cta-text">Sign up now to start showcasing your talent, exploring projects, and connecting with opportunities!</p>
-        <button class="btn btn-primary">Sign Up</button>
+        <a href="/signup"><button  class="btn btn-primary">Sign Up</button></a><br><br>
+        <p>Email: <a href="mailto:info@visionvault.com">info@visionvault.com</a></p>
+       
     </section>
-        <div class="contact-info">
-            <p>Email: info@visionvault.com</p>
-        </div>
+    
+           
 </div>
 <%- include('partials/footer')%>
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                crossorigin="anonymous"></script>
 </body>
 </html>
