--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,7 +21,7 @@
                             </form>                          
                         </li>
                         <li class="nav-item nav-pages pe-4">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item nav-pages pe-4">
                             <a class="nav-link" aria-current="page" href="/about">About</a>
