--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,9 +5,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-.header{
+/* .header{
   padding-bottom: 3rem;
-}
+} */
 .navbar{
   background-color: white;
   padding-top: 1rem;
@@ -54,7 +54,7 @@
     border: 0;
 }
 .login:hover,.signup:hover{
-  box-shadow: rgba(94, 94, 105, 0.2) 0px 7px 29px 0px;
+  /* box-shadow: rgba(94, 94, 105, 0.2) 0px 7px 29px 0px; */
   border:0;
 }
 .search-bar {
@@ -73,33 +73,34 @@
   left: 2rem;
 }
 .carousel{
-  margin-left: 1rem;
+  width: 850px;
+}
+.carousel-inner{
   border: 2px solid black;
-  width: 750px;
-  height: 495px;
+  width: 850px;
+  height: 415px;
+}
+.carousel-item{
+  height: 415px;
+}
+.carousel-item .img{
+  width: 100%;
+  height: 415px;
   object-fit: cover;
 }
-.carousel-indicators {
-  position: relative;
-  top: 29rem;
-}
-.carousel-innner{
-  width: 750px;
-  height: 495px;
-  object-fit: cover;
-}
-.carousel-item img{
-  width: 450px;
-  height: auto;
+.carousel-sib-div{
+  width: fit-content;
+  margin-right: 8px;
 }
 .carousel-sibling{
-    width: 450px;
-    height: auto;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 .project-head{
   font-size: 1.5rem;
   font-weight: 600;
-  margin-top: 1.5rem;
+  /* margin-top: 1.5rem; */
   margin-left: 1.5rem;
 }
 .project-count{
@@ -157,8 +158,14 @@ section .file-li .details span{
   color: #6990f2;
   font-size: 16px;
 }
+#searchResults{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
 .card{
   border: 0;
+  flex-basis: 30%;
 }
 .card-body{
   display: flex;
@@ -177,8 +184,11 @@ section .file-li .details span{
 .card-body p{
   font-size: 1rem;
 }
-.card-img{
+.card-img-top{
   border-radius: 6px;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
 }
 footer{
   background-color: #040c10;
