--- a/views/my-project.ejs
+++ b/views/my-project.ejs
@@ -14,93 +14,120 @@
 
 <body>
     <%- include('partials/navbar', { isLoggedIn: isLoggedIn, username: username }) %>
-    
-    <div class="row mt-3 pb-3">
-        <div class="col-lg-10 col-md-8 col-sm-8">
-            <h1 class="project-head">Projects <span class="project-count">(<%= cards.length %>)</span>
-            </h1>
-        </div>
-        <% if (isLoggedIn) { %>
-        <div class="col-lg-2 col-md-4 col-sm-4 d-flex">
-            <button type="button" class="btn btn-primary align-self-end" id="add-button" data-bs-toggle="modal"
-                data-bs-target="#project-modal"><img class="me-1" src="/img/add.svg" alt="">Add Project</button>
-        </div>
-        <% }%>
-        <!-- <hr class="hr-project mt-2"> -->
-    </div>
-    <!--Project Add Modal -->
-    <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="projectModalLabel">Add Project</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+        <div class="row pb-3">
+            <div class="col-lg-10 col-md-8 col-sm-8">
+                <h1 class="project-head">Projects <span class="project-count">(<%= cards.length %>)</span>
+                </h1>
+            </div>
+            <% if (isLoggedIn) { %>
+                <div class="col-lg-2 col-md-4 col-sm-4 d-flex">
+                    <button type="button" class="btn btn-primary align-self-end" id="add-button" data-bs-toggle="modal"
+                        data-bs-target="#project-modal"><img class="me-1" src="/img/add.svg" alt="">Add Project</button>
                 </div>
-                <div class="modal-body">
-                    <div class="project-info">
-                        <div class="mb-3">
-                            <label for="project-title-field" class="form-label">Project Title</label>
-                            <input type="text" class="form-control" id="project-title-field" required>
+                <% }%>
+                    <!-- <hr class="hr-project mt-2"> -->
+        </div>
+        <!--Project Add Modal -->
+        <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="projectModalLabel">Add Project</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="project-info">
+                            <div class="mb-3">
+                                <label for="project-title-field" class="form-label">Project Title</label>
+                                <input type="text" class="form-control" id="project-title-field" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="project-desc-field" class="form-label">Project Description</label>
+                                <textarea class="form-control" id="project-desc-field" rows="3"></textarea>
+                            </div>
                         </div>
-                        <div class="mb-3">
-                            <label for="project-desc-field" class="form-label">Project Description</label>
-                            <textarea class="form-control" id="project-desc-field" rows="3"></textarea>
+                        <!--FIle Uploading-->
+                        <div class="file-upload d-flex align-content-center justify-content-center flex-column">
+                            <h1>Uplaod Your Attachment<sub style="font-size: medium; color: gray">(.png,.jpg
+                                    supported)</sub></h1>
+                            <div class="wrapper">
+                                <form action="/" enctype="multipart/form-data" class="img-form">
+                                    <input type="file" name="projectImages" id="project-images" class="file-input"
+                                        multiple required hidden>
+                                    <!-- <button type="submit">Upload</button> -->
+                                    <img src="/img/cloud-upload.svg" alt="">
+                                    <p>Browse File to Upload</p>
+                                </form>
+                            </div>
+                            <section class="upload-area"></section>
                         </div>
                     </div>
-                    <!--FIle Uploading-->
-                    <div class="file-upload d-flex align-content-center justify-content-center flex-column">
-                        <h1>Uplaod Your Attachment<sub style="font-size: medium; color: gray">(.png,.jpg
-                                supported)</sub></h1>
-                        <div class="wrapper">
-                            <form action="/" enctype="multipart/form-data" class="img-form">
-                                <input type="file" name="projectImages" id="project-images" class="file-input"
-                                    multiple required hidden>
-                                <!-- <button type="submit">Upload</button> -->
-                                <img src="/img/cloud-upload.svg" alt="">
-                                <p>Browse File to Upload</p>
-                            </form>
-                        </div>
-                        <section class="upload-area"></section>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="uploadProject()">Save
+                            changes</button>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" onclick=uploadProject() class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Project Desc Modal -->
-    <div class="modal fade" id="cardModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="cardModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-scrollable">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="cardModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p id="modalCardDesc"></p>
-                    <div id="modalCardImages" class="mb-3">
-                        <!-- Images will be dynamically added here -->
+        <!-- Project Desc Modal -->
+        <div class="modal fade" id="cardModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="cardModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="cardModalLabel">Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save</button>
+                    <div class="modal-body">
+                        <p id="modalCardDesc"></p>
+                        <div id="modalCardImages" class="mb-3">
+                            <!-- Images will be dynamically added here -->
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="searchResults" class="row m-2 d-flex">
-        <!-- Initial project cards will be rendered here -->
-        <%- include('partials/project-list', { projects: cards, isLoggedIn:isLoggedIn,ismy:false }) %>
-    </div>
-    <%- include('partials/footer')%>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-        <script src="/js/script.js"></script>
+        <!--Project  Edit Modal -->
+        <div class="modal fade" id="project-edit-modal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="projectModalLabel">Edit Project</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="project-info">
+                            <div class="mb-3">
+                                <label for="project-edit-title-field" class="form-label">Project Title</label>
+                                <input type="text" class="form-control" id="project-edit-title-field" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="project-edit-desc-field" class="form-label">Project Description</label>
+                                <textarea class="form-control" id="project-edit-desc-field" rows="3"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="saveProjectChanges()">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div id="searchResults" class="row m-2 d-flex">
+            <!-- Initial project cards will be rendered here -->
+            <%- include('partials/project-list', { projects: cards, isLoggedIn:isLoggedIn,ismy:true }) %>
+        </div>
+        <%- include('partials/footer')%>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
+            <script src="/js/myproject.js"></script>
 </body>
 
 </html>
