--- a/views/partials/project-list.ejs
+++ b/views/partials/project-list.ejs
@@ -15,21 +15,28 @@
             </div>
             <div class="card-stats">
                 <span class="like-span">
-                    <img class="like-svg" src="/img/like.svg" alt="" <% if (isLoggedIn) { %>
-                    onclick="toggleLike('<%= project._id %>')"
-                        <% } %>>
-                            <span class="like-count" id="likeCount<%= project._id %>" style="user-select: none;"
-                                data-likes="<%= project.likes %>">
-                                <%= project.likes %>
-                            </span>
+                    <% if (isLoggedIn) { %>
+                        <% if (!ismy) { %>
+                            <button type="button" class="btn save-btn" onclick="saveProject('<%= project._id %>')"><img
+                                    src="/img/save.svg" alt=""></button>
+                            <% } %>
+                                <% } %>
+                                    <img class="like-svg" src="/img/like.svg" alt="" <% if (isLoggedIn) { %>
+                                    onclick="toggleLike('<%= project._id %>')"
+                                        <% } %>>
+
+                                            <span class="like-count" id="likeCount<%= project._id %>"
+                                                style="user-select: none;" data-likes="<%= project.likes %>">
+                                                <%= project.likes %>
+                                            </span>
                 </span>
             </div>
             <% if (isLoggedIn) { %>
                 <% if (ismy) { %>
-                <button type="button" class="btn btn-primary save-btn"
-                    onclick="saveProject('<%= project._id %>')">Save</button>
-                <% } %>
-            <% } %>
+                    <button type="button" class="btn btn-primary edit-btn"
+                        onclick="editProject('<%= project._id %>')">Edit</button>
+                    <% } %>
+                        <% } %>
         </div>
     </div>
     <% }) %>
