Change Password Corrected

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/about.css">
 </head>
 <body>
-    <%- include('partials/navbar',{isLoggedIn:false}) %>
+    <%- include('partials/navbar',{isLoggedIn:isLoggedIn,username:username}) %>
 <div class="container">
     <header class="header-section">
         <h1 class="title">About VisionVault</h1>
