--- a/public/css/index.css
+++ b/public/css/index.css
@@ -159,14 +159,15 @@ section .file-li .details span{
   font-size: 16px;
 }
 #searchResults{
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 1rem; */
+  background-color: #0a66c2;
 }
-.card{
+/* .card{
   border: 0;
   flex-basis: 30%;
-}
+} */
 .card-body{
   display: flex;
   flex-wrap: wrap;
@@ -188,6 +189,7 @@ section .file-li .details span{
   border-radius: 6px;
   width: 100%;
   height: 250px;
+  padding: 8px;
   object-fit: cover;
 }
 footer{
@@ -240,3 +242,9 @@ footer li a{
   }
   
 }
+/* @media (max-width: 768px) {
+  .card{
+    border: 0;
+    flex-basis: 50%;
+  }
+} */
