--- a/views/partials/project-list.ejs
+++ b/views/partials/project-list.ejs
@@ -1,5 +1,5 @@
 <% projects.forEach(project=> { %>
-    <div class="card col-lg-4 col-md-6">
+    <div class="card border mb-3">
         <img src="<%= project.images[0] %>" class="card-img-top card-img" alt="..." data-bs-toggle="modal"
             data-bs-target="#cardModal" data-title="<%= project.title %>" data-desc="<%= project.desc %>"
             data-images="<%= project.images.join(',') %>">
