Project Remove Functionality added

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="container-fluid">
+<footer class="container-fluid mt-5">
     <div class="row gap-3 pt-5 justify-content-center">
         <div class="col-lg-2 col-md-12">
             <h3 class="">VisionVault</h3>
