--- a/public/css/index.css
+++ b/public/css/index.css
@@ -69,25 +69,24 @@
   position: relative;
   left: 2rem;
 }
-.carousel{
-  width: 780px;
+/* .carousel{
+  min-width: 780px;
+  border: 2px solid black;
 }
 .carousel-inner{
-  border: 2px solid black;
   width: 780px;
   height: 415px;
 }
 .carousel-item{
   height: 415px;
-}
+} */
 .carousel-item .img{
   width: 100%;
   height: 415px;
   object-fit: cover;
 }
 /* .carousel-sib-div{
-  width: fit-content;
-  margin-right: 8px;
+  width: fit-content; 
 } */
 .carousel-sibling{
     width: 100%;
