react icon updated

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
         </div>
         <div class="col-lg-2 col-md-4">
             <h5 class="pt-3 pb-3">Built For Creatives</h5>
-                <li>Try Behance Pro</li>
+                <li>Try Vision Vault Pro</li>
                 <li>Find inspiration</li>
                 <li>Get Hired</li>
                 <li>Sell Creative Assets</li>
@@ -20,17 +20,17 @@
         </div>
         <div class="col-lg-2 col-md-4">
             <h5 class="pt-3 pb-3">Vision Vault</h5>
-                <li>About VisionVault</li>
-                <li>Blog</li>
+            <li><a href="/about">About VisionVault</a></li>
+            <li>Blog</li>
                 <li>Help Center</li>
-                <li>Contact Us</li>
-        </div>
+                <li><a href="mailto:info@visionvault.com">Contact Us</a></li>
+            </div>
         <div class="col-lg-2 col-md-4 pb-5">
             <h5 class="pt-3 pb-3">Social</h5>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Pinterest</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+            <li><a href="https://www.pinterest.com" target="_blank">Pinterest</a></li>
+            <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+            <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>            
         </div>
         <hr class="footer-hr">
         <div class="row">
