--- a/views/partials/project-list.ejs
+++ b/views/partials/project-list.ejs
@@ -26,15 +26,14 @@
                                     <% } %>
                                         <% if (isLoggedIn) { %>
                                             <% if (!ismy) { %>
-                                                <button type="button" class="btn save-btn"
-                                                    onclick="saveProject('<%= project._id %>')"><img src="/img/save.svg"
-                                                        alt=""></button>
+                                                <button type="button" class="btn save-btn" onclick="saveProject('<%= project._id %>')">
+                                                    <i class="far fa-bookmark save-icon" id="saveIcon"></i>
+                                                </button>
                                                 <% } %>
                                                     <% } %>
-                                                        <img class="like-svg" src="/img/like.svg" alt="" <% if
-                                                            (isLoggedIn) { %>
-                                                        onclick="toggleLike('<%= project._id %>')"
-                                                            <% } %>>
+                                                        <!-- <img class="like-svg" src="/img/like.svg" alt=""> -->
+                                                        <i class="fas fa-thumbs-up like-icon" id="likeIcon" <% if (isLoggedIn) { %> onclick="toggleLike('<%= project._id %>')" <% } %>></i>
+
 
                                                                 <span class="like-count"
                                                                     id="likeCount<%= project._id %>"
