--- a/public/css/index.css
+++ b/public/css/index.css
@@ -239,7 +239,27 @@ footer li a{
 
 .save-icon.active {
   animation: popUp 0.5s ease;
+
 }
+
+@keyframes popUp {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+
+.edit-icon {
+  font-size: 24px;
+  color: gray;
+  transition: color 0.3s ease, transform 0.3s ease;
+  cursor: pointer;
+}
+
+.edit-icon.active {
+  animation: popUp 0.5s ease;
+}
+
+
 /**/
 @media (max-width: 992px) {
   .log-sign-li{
