--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,35 +18,39 @@
 <body>
     <%- include('partials/navbar', { isLoggedIn: isLoggedIn, username: username }) %>
         <div class="row mt-5 d-flex flex-wrap">
-            <div class="col-lg-7">
+            <div class="col-lg-7 ms-2">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <% carousel.images.forEach((item, index)=> { %>
-                            <button type="button" data-bs-target="#carouselExampleCaptions"
-                                data-bs-slide-to="<%= index %>"
-                                class="<%= index === 0 ? 'active bg-primary' : 'bg-primary' %>"
-                                aria-current="<%= index === 0 ? 'true' : 'false' %>"
-                                aria-label="Slide <%= index + 1 %>"></button>
-                            <% }); %>
-                    </div>
-                    <div class="carousel-inner">
-                        <% carousel.images.forEach((item, index)=> { %>
-                            <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
-                                <img src="<%= item %>" class="d-block img-fluid" alt="...">
-                            </div>
-                            <% }); %>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 carousel-sib-div">
-                <div class="row pb-3  row-cols-2 row-cols-md-2 row-cols-lg-1 g-3">
-                    <% carousel_sib.forEach(item=> { %>
-                        <div class="col">
-                            <img src="<%= item.images[0] %>" class="d-block carousel-sibling img-fluid" alt="...">
+                    <% if (carousel) { %>
+                        <div class="carousel-indicators">
+                            <% carousel.images.forEach((item, index)=> { %>
+                                <button type="button" data-bs-target="#carouselExampleCaptions"
+                                    data-bs-slide-to="<%= index %>"
+                                    class="<%= index === 0 ? 'active bg-primary' : 'bg-primary' %>"
+                                    aria-current="<%= index === 0 ? 'true' : 'false' %>"
+                                    aria-label="Slide <%= index + 1 %>"></button>
+                                <% }); %>
                         </div>
-                        <% }) %>
+                        <div class="carousel-inner">
+                            <% carousel.images.forEach((item, index)=> { %>
+                                <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
+                                    <img src="<%= item %>" class="d-block img-fluid" alt="...">
+                                </div>
+                                <% }); %>
+                        </div>
+                        <% } %>
                 </div>
             </div>
+            <% if (carousel_sib) { %>
+                <div class="col-lg-4 carousel-sib-div ms-5">
+                    <div class="row pb-3 row-cols-2 row-cols-md-2 row-cols-lg-1 g-3">
+                        <% carousel_sib.forEach(item=> { %>
+                            <div class="col">
+                                <img src="<%= item.images[0] %>" class="d-block carousel-sibling img-fluid" alt="...">
+                            </div>
+                            <% }) %>
+                    </div>
+                </div>
+                <% } %>
         </div>
         <div class="row mt-5 pb-3 row-cols-2 row-cols-md-2 row-cols-lg-2">
             <div class="col">
@@ -91,7 +95,7 @@
             <%- include('partials/project-list', { projects: cards, isLoggedIn: isLoggedIn, ismy: false }) %>
         </div>
         <%- include('partials/footer')%>
-        
+
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous"></script>
