--- a/views/my-project.ejs
+++ b/views/my-project.ejs
@@ -20,7 +20,7 @@
 
         <div class="row mt-5 pb-3 row-cols-2 row-cols-md-2 row-cols-lg-2">
             <div class="col">
-                <h1 class="project-head">Projects <span class="project-count">(<%= cards.length %>)</span>
+                <h1 class="project-head">My Projects <span class="project-count">(<%= cards.length %>)</span>
                 </h1>
             </div>
             <% if (isLoggedIn) { %>
