--- a/views/saved-projects.ejs
+++ b/views/saved-projects.ejs
@@ -20,7 +20,7 @@
 
         <div class="row mt-3 pb-3">
             <div class="col-lg-12">
-                <h1 class="project-head">Projects <span class="project-count">(<%= cards.length %>)</span>
+                <h1 class="project-head">Saved Projects <span class="project-count">(<%= cards.length %>)</span>
                 </h1>
             </div>
             <!-- Project Desc Modal -->
@@ -82,8 +82,6 @@
                                     </span>
                                 </div>
                                 <% if (isLoggedIn) { %>
-                                    <button type="button" class="btn btn-primary remove-btn"
-                                        onclick="removeProject('<%= project._id %>')">Remove</button>
                                     <button type="button" class="btn btn-primary hire-btn"
                                         onclick="hireAuthor('<%= project._id %>')">Hire me</button>
                                     <% } %>
