--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -20,7 +20,7 @@
 <div class="container form-container">
     <div class="row justify-content-center">
         <div class="col-md-12">
-            <h2 class="text-center mb-4">Log In</h2>
+            <h2 class="text-center mb-4">Sign In</h2>
             <form onsubmit="signinFORM(event)" method="POST" >
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
@@ -35,7 +35,7 @@
                     <a href="/forgetpassword">Forgot Password?</a>
                 </div>
             </form>
-            <p class="social-text">Or sign in with social platforms</p>
+            <p class="social-text">New Here? <a href="/signup">Sign Up</a></p>
             <div class="social-media">
                 <a href="#" class="social-icon">
                     <i class="fab fa-facebook-f"></i>
@@ -59,16 +59,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/signin.js"></script>
 
-  <!-- JavaScript to close the email page if specified -->
-  <script>
-    // Check if the URL contains a query parameter indicating to close the email page
-    const urlParams = new URLSearchParams(window.location.search);
-    const closed = urlParams.get('closed');
 
-    // If the 'closed' parameter is 'true', close the previous email page
-    if (closed === 'true' && window.opener) {
-        window.opener.close();
-    }
 </script>
 </body>
 </html>
