--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -36,7 +36,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Sign Up</button>
             </form>
-            <p class="social-text">Or Sign up with social platforms</p>
+            <p class="social-text">Already have an account <a href="/signin">Sign In</a></p>
             <div class="social-media">
                 <a href="#" class="social-icon">
                     <i class="fab fa-facebook-f"></i>
