--- a/views/emailpage.ejs
+++ b/views/emailpage.ejs
@@ -21,7 +21,7 @@
         <div class="col-md-12 text-center">
             <h2 class="mb-4">Email Verification</h2>
             <p class="verification-text">A verification email has been sent to your email address. Please check your inbox and click on the verification link to activate your account.</p>
-            <a href="https://mail.google.com" class="btn btn-primary">Go to Email</a>
+            <a href="/signin" class="btn btn-primary">Go to Sign In</a>
         </div>
     </div>
 </div>
