--- a/public/css/index.css
+++ b/public/css/index.css
@@ -258,15 +258,48 @@ footer li a{
 .edit-icon.active {
   animation: popUp 0.5s ease;
 }
-
+@media (max-width: 1500px) {
+  .carousel-div{
+    width: 100%;
+  }
+  .log-sign-li{
+    padding-top: 1rem;
+    
+  }
+  .login{
+    margin-left: 3rem;
+  }
+  .signup{
+    margin-left: 1.8rem;
+  }
+}
+@media (max-width: 1200px) {
+  .carousel-div{
+    width: 100%;
+  }
+  .log-sign-li{
+    padding-top: 1rem;
+    
+  }
+  .login{
+    margin-left: 3rem;
+  }
+  .signup{
+    margin-left: 1.8rem;
+  }
+}
 
 /**/
 @media (max-width: 992px) {
   .log-sign-li{
     padding-top: 1rem;
+    
   }
   .login{
-    margin-right: 1rem;
+    margin-left: 3rem;
+  }
+  .signup{
+    margin-left: 1.8rem;
   }
   .search-bar-form{
     width: 100%;
