--- a/views/partials/project-list.ejs
+++ b/views/partials/project-list.ejs
@@ -33,8 +33,9 @@
                                                 <% } %>
                                                     <% } %>
                                                         <!-- <img class="like-svg" src="/img/like.svg" alt=""> -->
-                                                        <i class="fas fa-thumbs-up like-icon" <% if (isLoggedIn) { %> onclick="toggleLike('<%= project._id %>', this)" <% } %>></i>
+                                                        <i class="fas fa-thumbs-up like-icon" <% if (isLoggedIn) { %> onclick="toggleLike('<%= project._id %>', this)" <% } else { %> onclick="window.location.href='/signin'" <% } %>></i>
 
+                                                        
 
                                                         <span class="like-count" id="likeCount<%= project._id %>"
                                                             style="user-select: none;"
